electron/launcher/src/App.scss
// Avenir Next font faces
@font-face {
  font-family: 'Avenir Next';
  src: url('./assets/fonts/avenir/AvenirNext-Regular-08.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'Avenir Next';
  src: url('./assets/fonts/avenir/AvenirNext-DemiBold-03.ttf') format('truetype');
  font-weight: 300;
  font-style: normal;
}

@font-face {
  font-family: 'Avenir Next';
  src: url('./assets/fonts/avenir/AvenirNext-Bold-01.ttf') format('truetype');
  font-weight: bold;
  font-style: normal;
}

*{
  box-sizing: border-box;
  font-family: 'Avenir Next', Helvetica, sans-serif;
}
html, body {
  font-size: 16px;
  color: #232323;
}
body{
  margin: 0;

}
h1{
  font-size: 2.25rem;
  font-weight: bold;
  font-style: normal;
}

.form__container{
  border-left: 3px solid #F7943A;
  padding: 4rem 2rem 0 2rem !important;
  a{
    display: block;
  }
  form{
    margin: 2.5rem 0;
    button[type=submit]{
      font-weight: bold;
    }
  }
}

.hero-image{
  background: url('../src/assets/dietstory_login_background.png') no-repeat center;
  background-size: cover;
  min-height: 578px;
  padding: 1.5rem 3rem !important;
}

.app-container{
  &--loggedin{
    background: url('../src/assets/main_background.png') no-repeat center;
    background-size: cover;
    min-height: 578px;
  }
}

.main-header{
  background-color: white;
  border-bottom: 2px solid #F7943A;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.24);
  padding: 1rem 1rem;
  font-size: 1.125rem;
  nav{
    display:flex;
    align-items: center;
  }
  * {
    margin: 0 0.5rem;
  }
  &__link{
    color: #B2B2B2;
    &--active{
      color: #4A4A4A;
    }
    &:hover{
      color: #4A4A4A;
    }
  } 
}


.sub-header{
  margin-top: 1rem;
  font-size: 1.125rem;
  text-decoration: none;
  * {
    margin-right: 0.5rem;
  }

  &__link {
    color: #8c8c8c;
    &--active{
      color: #4A4A4A;
      border-bottom: 2px solid #F7943A;
    }

    &:hover{
      color: #4A4A4A;
    }
  }
}

.play-button{
  width: 144px;
  font-weight: bold;
  letter-spacing: 2px;
  border-radius: 10px;
  border: 5px solid #1f8637;
  // box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
  &.disabled{
    cursor: default;
  }
}

.patcher{
  background-color: white;
  bottom: 0;
  left: 0;
  width: 100%;
  position: fixed;
  padding: 1rem 2rem;
  border-top: 2px solid #F7943A;
}

.progress{
  border-radius: 20px;
  height: 2rem;
  border: 1px solid #979797;
  font-weight: 300;
  font-size: 1.5rem;
}

.hero-card {
 background-color: white;
 border: 2px solid #F7943A;
 padding: 2rem;
 margin-top: 2rem;
 box-shadow: 0 2px 1px -1px rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 1px 3px 0 rgba(0,0,0,.12);
}
.profile{
  &__picture{
    width:250px;
    border-radius: 50%;
    border: 2px solid #F7943A;
    margin: 1rem;
  }
  &__username{
    font-size: 3rem;
    display:inline;
  }
}

.title-bar{
  padding-top: 0.5rem;
  position:fixed;
  z-index: 99;
  width: 100%;
  display:flex;
  justify-content: flex-end;
  -webkit-app-region: drag;
  &__controls{
    -webkit-app-region: no-drag;
    & button{
      overflow: hidden;
      background-color:white;
      -webkit-appearance: none;
      border: none;
      &:hover{
        background-color: #CECECE;
      }
      &:focus{
        outline:none;
      }
      &:active{
        background-color: #BABABA;
      }
      & img {
        vertical-align: bottom;
      }
    }
  }
}

.upgrade-prompt{
  background: #F7943A !important;
  padding: 12px !important;
}

.upgrade-prompt-body{
  color: white !important;
  display: flex !important;
  justify-content: center !important;
  align-items: center !important;
}

.btn-resend{
  margin-bottom: 2rem;
}

.error-text{
  color: #bb0000;
}

